Bug 169986 - footnotes are getting below spacing from the continuous section break
Summary: footnotes are getting below spacing from the continuous section break
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.6.2 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.8.0 target:26.2.0.0.beta2 t...
Keywords: bisected, regression
Depends on:
Blocks: DOCX-Paragraph
  Show dependency treegraph
 
Reported: 2025-12-15 18:50 UTC by Justin L
Modified: 2025-12-19 01:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
forum-mso-en-15521.docx (20.93 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-12-15 18:50 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2025-12-15 18:50:20 UTC
Created attachment 204658 [details]
forum-mso-en-15521.docx

The most visible problem in this document is that it becomes two pages in MS Word after it is round-tripped by LO. This is caused by excess spacing being added to the footnotes.

This started in 24.2.6 after commit 74c29345a7c179b048c157582a1145e381616e5c
Author:     Justin Luth on Mon Jul 28 09:29:51 2025 +0200
    tdf#167657 writerfilter: only move sectPr bottomMargin after pageBreak
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188298

Steps to reproduce:
1.) open forum-mso-en-15521.docx in MS Word.
-notice that the first two footnotes have 0 below spacing - so they are close together.
2.) round-trip the file using LO.
3.) open the round-tripped file in MS Word.
-notice that the first two footnotes has 12pt below spacing - so they are far apart.
Comment 1 Justin L 2025-12-15 19:12:03 UTC
Found by Collabora's mso-test
Comment 2 Commit Notification 2025-12-15 22:20:20 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/01c39dcb622256a66bd11aaaa695729db9b27468

tdf#169986 docx import: no sectPr belowSpacing to footnotes

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-12-15 23:22:33 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/b5637481d060d01094e7ceef959744d96547cdbb

tdf#169986 docx import: no sectPr belowSpacing to footnotes

It will be available in 26.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-12-16 08:56:21 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/e070494364f62e7d14ffcbfa87cafe708bacb1d6

tdf#169986 docx import: no sectPr belowSpacing to footnotes

It will be available in 25.8.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-12-19 01:32:21 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/691bcfb8ab158e907390e25eaa69ab4c60ce24de

tdf#169986 improve unit test

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.