tdf#169986 docx import: no sectPr belowSpacing to footnotes

This fixes my 25.2.6 regression from
commit 1326e09d019f05a82265f15c26288b4ffb7dc0c2
Author: Justin Luth on Mon Jul 28 09:29:51 2025
    tdf#167657 only move sectPr bottomMargin after pageBreak

Footnotes (and comments) are always a CloseSectionGroup disaster.
The section's belowSpacing should never transfer
into a footnote - it only applies to the body paragraphs.

make CppunitTest_sw_ooxmlexport25 \
    CPPUNIT_TEST_NAME=testTdf169986_bottomSpacing

Change-Id: I848ccda2ce2bb84de951c6da8f4001d217b8b38a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195683
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>
(cherry picked from commit 01c39dcb622256a66bd11aaaa695729db9b27468)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195684
(cherry picked from commit b5637481d060d01094e7ceef959744d96547cdbb)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195686
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit e070494364f62e7d14ffcbfa87cafe708bacb1d6)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195709
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>